# archiver

./: README.md
AI-Evolution-Game/: LICENSE  README.md  setup_project.sh
AI-Evolution-Game/docs/: PRD.md
AI-Evolution-Game/src/: game.js  index.html  (+1 more)
attempt-index/: .env.example  CLAUDE.md  README.md  prd.md  pyproject.toml
attempt-index/app/: config.py  main.py
attempt-index/app/db/: client.py  queries.py
attempt-index/app/matchers/: base.py  hash_matcher.py
attempt-index/app/models/: request.py  response.py
attempt-index/app/routes/: bootstrap.py  evaluate.py  frontiers.py
attempt-index/app/services/: attempt.py
attempt-index/cli/: main.py
attempt-index/docs/guides/: bootstrap.md  campaign-configuration.md  canonical-fields.md  custom-matchers.md  database-setup.md  evaluate.md  getting-started.md  glossary.md  scenarios.md
attempt-index/migrations/: 001_attempt_records.sql  002_add_campaign_id.sql  003_rename_match_ref_to_match_key.sql  004_frontier_taxonomy.sql
attempt-index/scripts/: demo_scenarios.py
attempt-index/tests/: conftest.py  test_bootstrap.py  test_campaign_scope.py  test_evaluate.py  test_frontiers.py  test_matchers.py
contributor-portal/: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  package.json  prd.md
developer-portal/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_SYSTEM.md  README.md  REVIEW.md  campaign-launch-roadmap.md  package.json  prd.md  prod_overview.md  release-workflow.md  steps_build_with_real.md
rootdata-codatta-deck/: README.md  index.html
task-audit/: .gitignore  README.md
(+353 files in other folders)
